--- a/clone-pagina-youtube-com-css/index.html
+++ b/clone-pagina-youtube-com-css/index.html
@@ -266,7 +266,80 @@
           </p>
         </section>
       </main>
-      <aside></aside>
+      <aside class="sidebar">
+        <section class="sidebar-item">
+          <img src="assets/images/sidebar-thumb-1.png" alt="" />
+          <div class="sidebar-item-info">
+            <h3>Geração Tech Unimed - BH - Ciência de Dados</h3>
+            <p>DigitalInnovationOne</p>
+            <p>2,1 mil visualizações <br>
+            Transmitido há 2 dias</p>
+        </section>
+        <section class="sidebar-item">
+          <img src="assets/images/sidebar-thumb-2.png" alt="" />
+          <div class="sidebar-item-info">
+            <h3>Scrum Talks</h3>
+            <p>DigitalInnovationOne</p>
+            <p>1,6 mil visualizações <br>
+              Transmitido há 3 dias</p>
+        </section>
+        <section class="sidebar-item">
+          <img src="assets/images/sidebar-thumb-3.png" alt="" />
+          <div class="sidebar-item-info">
+            <h3>Machine Learning Avançado - Fast Track</h3>
+            <p>DigitalInnovationOne</p>
+            <p>1,7 mil visualizações <br>
+            Transmitido há 4 dias</p>
+        </section>
+        <section class="sidebar-item">
+          <img src="assets/images/sidebar-thumb-4.png" alt="" />
+          <div class="sidebar-item-info">
+            <h3>Global Skills #2 - Project Planning</h3>
+            <p>DigitalInnovationOne</p>
+            <p>971 visualizações <br>
+            Transmitido há 5 dias</p>
+        </section>
+        <section class="sidebar-item">
+          <img src="assets/images/sidebar-thumb-5.png" alt="" />
+          <div class="sidebar-item-info">
+            <h3>Como aprender a programar Python do ZERO</h3>
+            <p>DigitalInnovationOne</p>
+            <p>711 visualizações <br>
+            Transmitido há 6 dias</p>
+        </section>
+        <section class="sidebar-item">
+          <img src="assets/images/sidebar-thumb-1.png" alt="" />
+          <div class="sidebar-item-info">
+            <h3>Geração Tech Unimed - BH - Ciência de Dados</h3>
+            <p>DigitalInnovationOne</p>
+            <p>2,1 mil visualizações <br>
+            Transmitido há 2 dias</p>
+        </section>
+        <section class="sidebar-item">
+          <img src="assets/images/sidebar-thumb-2.png" alt="" />
+          <div class="sidebar-item-info">
+            <h3>Scrum Talks</h3>
+            <p>DigitalInnovationOne</p>
+            <p>1,6 mil visualizações <br>
+              Transmitido há 3 dias</p>
+        </section>
+        <section class="sidebar-item">
+          <img src="assets/images/sidebar-thumb-3.png" alt="" />
+          <div class="sidebar-item-info">
+            <h3>Machine Learning Avançado - Fast Track</h3>
+            <p>DigitalInnovationOne</p>
+            <p>1,7 mil visualizações <br>
+            Transmitido há 4 dias</p>
+        </section>
+        <section class="sidebar-item">
+          <img src="assets/images/sidebar-thumb-4.png" alt="" />
+          <div class="sidebar-item-info">
+            <h3>Global Skills #2 - Project Planning</h3>
+            <p>DigitalInnovationOne</p>
+            <p>971 visualizações <br>
+            Transmitido há 5 dias</p>
+        </section>
+      </aside>
     </div>
   </body>
 </html>
