--- a/layout-responsivo-site-discord/index.html
+++ b/layout-responsivo-site-discord/index.html
@@ -26,37 +26,44 @@
           src="assets/images/image-section-1.png"
           alt="Print da página do Discord"
         />
-        <h3>
-          Crie um espaço controlado por convite onde você se sinta em casa
-        </h3>
-        <p>
-          Os servidores Discord são organizados em canais com assuntos para
-          vocês colaborarem, compartilharem ou simplesmente falarem do dia sem
-          entupir um chat geral.
-        </p>
+        <section class="section-texts">
+          <h3>
+            Crie um espaço controlado por convite onde você se sinta em casa
+          </h3>
+          <p>
+            Os servidores Discord são organizados em canais com assuntos para
+            vocês colaborarem, compartilharem ou simplesmente falarem do dia sem
+            entupir um chat geral.
+          </p>
+        </section>
       </section>
       <section class="section-2">
         <img
           src="assets/images/image-section-2.png"
           alt="Print da página do Discord"
         />
-        <h3>Aqui é fácil se encontrar</h3>
-        <p>
-          Entre no canal de voz quando estiver à toa. Amigos no mesmo servidor
-          podem te ver e entrar imediatamente, sem nem ter que fazer a chamada.
-        </p>
+        <section class="section-texts">
+          <h3>Aqui é fácil se encontrar</h3>
+          <p>
+            Entre no canal de voz quando estiver à toa. Amigos no mesmo servidor
+            podem te ver e entrar imediatamente, sem nem ter que fazer a
+            chamada.
+          </p>
+        </section>
       </section>
       <section class="section-3">
         <img
           src="assets/images/image-section-3.png"
           alt="Print da página do Discord"
         />
-        <h3>Para poucos e para muitos</h3>
-        <p>
-          Organize qualquer comunidade com ferramentas de moderação e acesso
-          personalizado a membros. Dê poderes especiais aos membros, monte
-          canais privados e muito mais.
-        </p>
+        <section class="section-texts">
+          <h3>Para poucos e para muitos</h3>
+          <p>
+            Organize qualquer comunidade com ferramentas de moderação e acesso
+            personalizado a membros. Dê poderes especiais aos membros, monte
+            canais privados e muito mais.
+          </p>
+        </section>
       </section>
       <section class="section-4">
         <h2>TECNOLOGIA DE CONEXÃO CONFIÁVEL</h2>
