--- a/classificador-nivel-heroi/index.html
+++ b/classificador-nivel-heroi/index.html
@@ -59,13 +59,10 @@
           </svg>
         </button>
         <h3>
-          O herói de nome <span id="hero-name">{nome}</span> está no nível de
+          O herói de nome <span id="hero-name">{nome}</span> <br />está no nível
         </h3>
-        <h2>Ferro</h2>
-        <p>
-          Um herói em seus primeiros passos. Ainda há muito a aprender, mas a
-          coragem já é sua maior arma.
-        </p>
+        <h2>{Nível}</h2>
+        <p>{Descrição do nível.}</p>
       </dialog>
     </main>
     <script src="assets/js/script.js" defer></script>
