Adiciona link nos botões

--- a/layout-responsivo-site-discord/index.html
+++ b/layout-responsivo-site-discord/index.html
@@ -16,8 +16,8 @@
         e socializar com mais frequência.
       </p>
       <section class="buttons">
-        <button id="btn-white">Baixar para Windows</button>
-        <button id="btn-black">Abra o Discord no seu navegador</button>
+        <a href="https://discord.com/" target="_blank" rel="noreferrer"><button id="btn-white">Baixar para Windows</button></a>
+        <a href="https://discord.com/" target="_blank" rel="noreferrer"><button id="btn-black">Abra o Discord no seu navegador</button></a>
       </section>
     </header>
     <main>
