--- a/yugioh-jokenpo/index.html
+++ b/yugioh-jokenpo/index.html
@@ -26,16 +26,16 @@
       </video>
     </div>
     <section class="container">
-      <aside class="container__letf">
-        <section class="score_box">
+      <aside class="container__letf framed-golden-2">
+        <section class="score_box frame">
           <span id="score_points">Win: 0 | Lose: 0</span>
         </section>
         <section class="menu_avatar">
           <img src="" alt="" id="card-image" />
         </section>
-        <section class="card_details">
-          <p id="card-name"></p>
-          <p id="card-type"></p>
+        <section class="card_details frame">
+          <p id="card-name">A</p>
+          <p id="card-type">A</p>
         </section>
       </aside>
       <main class="container__right">
