--- a/yugioh-jokenpo/index.html
+++ b/yugioh-jokenpo/index.html
@@ -39,7 +39,30 @@
         </section>
       </aside>
       <main class="container__right">
-        <section class="card-box__container"></section>
+        <section class="card-box__container">
+          <section class="card-box framed" id="computer-cards"></section>
+          <section class="card-versus">
+            <div class="versus-top">
+              <div class="card-infield">
+                <img id="player-field-card" height="180px" width="125px" />
+              </div>
+              <img
+                src="src/assets/icons/millenium2.png"
+                alt=""
+                height="100px"
+              />
+              <div class="card-infield">
+                <img id="player-field-card" height="180px" width="125px" />
+              </div>
+            </div>
+            <div class="versus-bottom">
+              <button id="next-duel" class="rpgui-button" onclick="resetDuel()">
+                GANHOU
+              </button>
+            </div>
+          </section>
+          <section class="card-box framed" id="player-cards"></section>
+        </section>
       </main>
     </section>
     <script src="src/scripts/engine.js" defer></script>
