Retira tamnaho que estava atribuido nas tags img

--- a/yugioh-jokenpo/index.html
+++ b/yugioh-jokenpo/index.html
@@ -44,7 +44,7 @@
           <section class="card-versus">
             <div class="versus-top">
               <div class="card-infield">
-                <img id="player-field-card" height="180px" width="125px" />
+                <img id="player-field-card" />
               </div>
               <img
                 src="src/assets/icons/millenium2.png"
@@ -52,7 +52,7 @@
                 height="100px"
               />
               <div class="card-infield">
-                <img id="player-field-card" height="180px" width="125px" />
+                <img id="player-field-card" />
               </div>
             </div>
             <div class="versus-bottom">
