Ronemeia  a classe  "card-versus" para "card-verus__container"

--- a/yugioh-jokenpo/index.html
+++ b/yugioh-jokenpo/index.html
@@ -41,7 +41,7 @@
       <main class="container__right">
         <section class="card-box__container">
           <section class="card-box framed" id="computer-cards"></section>
-          <section class="card-versus">
+          <section class="card-versus__container">
             <div class="versus-top">
               <div class="card-infield">
                 <img id="player-field-card" />
