--- a/yugioh-jokenpo/index.html
+++ b/yugioh-jokenpo/index.html
@@ -34,8 +34,8 @@
           <img src="" alt="" id="card-image" />
         </section>
         <section class="card_details frame">
-          <p id="card-name">A</p>
-          <p id="card-type">A</p>
+          <p id="card-name">Seleciona</p>
+          <p id="card-type">uma carta</p>
         </section>
       </aside>
       <main class="container__right">
