Ajusta o id da img do card-infield

--- a/yugioh-jokenpo/index.html
+++ b/yugioh-jokenpo/index.html
@@ -52,7 +52,7 @@
                 height="100px"
               />
               <div class="card-infield">
-                <img id="player-field-card" />
+                <img id="computer-field-card" />
               </div>
             </div>
             <div class="versus-bottom">
