--- a/yugioh-jokenpo/index.html
+++ b/yugioh-jokenpo/index.html
@@ -15,6 +15,10 @@
     <!-- Framework -->
     <link rel="stylesheet" href="src/styles/buttons.css" />
     <link rel="stylesheet" href="src/styles/containers_and_frames.css" />
+
+    <!-- favicon -->
+    <link rel="shortcut icon" href="src/assets/favicon/Favicon.ico" type="image/x-icon">
+
     <!-- main style -->
     <link rel="stylesheet" href="src/styles/main.css" />
     <title>Yu-Gi-Oh Jokenpô</title>
