--- a/index.html
+++ b/index.html
@@ -1,63 +1,90 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projetos Bootcamp Santander Front-End</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        max-width: 800px;
-        margin: auto;
-        padding: 2rem;
-        background: #f7f7f7;
-      }
-      h1 {
-        text-align: center;
-      }
-      ul {
-        list-style-type: none;
-        padding: 0;
-      }
-      li a {
-        display: block;
-        background: white;
-        padding: 1rem;
-        margin-bottom: 0.5rem;
-        border-radius: 8px;
-        text-decoration: none;
-        color: #333;
-        transition: 0.3s;
-      }
-      li a:hover {
-        background: #e0e0e0;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Projetos Bootcamp Santander Front-End</h1>
-    <ul>
-      <li>
-        <a href="estrutura-html-basico/" target="_blank"
-          >estrutura-html-basico</a
-        >
-      </li>
-      <li><a href="layout-wikipedia/" target="_blank">layout-wikipedia</a></li>
-      <li><a href="landing-page/" target="_blank">landing-page</a></li>
-      <li>
-        <a href="clone-pagina-youtube-com-css/" target="_blank"
-          >clone-pagina-youtube-com-css</a
-        >
-      </li>
-      <li>
-        <a href="layout-responsivo-site-discord/" target="_blank"
-          >layout-responsivo-site-discord</a
-        >
-      </li>
-      <li>
-        <a href="classificador-nivel-heroi/" target="_blank"
-          >classificador-nivel-heroi
-      </li>
-    </ul>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="style.css">
+  <title>Projetos Bootcamp Santander Front-End</title>
+</head>
+
+<body>
+  <main>
+    <section class="container">
+      <h1>Projetos Bootcamp Santander Front-End</h1>
+      <section class="links">
+        <span>estrutura-html-basico</span>
+        <i class="bi bi-arrow-right-circle-fill"></i>
+        <a href="estrutura-html-basico/" target="_blank" rel="noopener"><button class="preview">prévia</button></a>
+        <a href="https://github.com/GabriellySS/bootcamp-santander-frontend/tree/main/estrutura-html-basico"
+          target="_blank" rel="noopener"><button class="repo">repositório</button></a>
+      </section>
+      <section class="links">
+        <span>layout-wikipedia</span>
+        <i class="bi bi-arrow-right-circle-fill"></i>
+        <a href="layout-wikipedia/" target="_blank" rel="noopener"><button class="preview">prévia</button></a>
+        <a href="https://github.com/GabriellySS/bootcamp-santander-frontend/tree/main/layout-wikipedia" target="_blank"
+          rel="noopener"><button class="repo">repositório</button></a>
+      </section>
+      <section class="links">
+        <span>landing-page</span>
+        <i class="bi bi-arrow-right-circle-fill"></i>
+        <a href="landing-page/" target="_blank" rel="noopener"><button class="preview">prévia</button></a>
+        <a href="https://github.com/GabriellySS/bootcamp-santander-frontend/blob/main/landing-page" target="_blank"
+          rel="noopener"><button class="repo">repositório</button></a>
+      </section>
+      <section class="links">
+        <span>clone-pagina-youtube-com-css</span>
+        <i class="bi bi-arrow-right-circle-fill"></i>
+        <a href="clone-pagina-youtube-com-css/" target="_blank" rel="noopener"><button
+            class="preview">prévia</button></a>
+        <a href="https://github.com/GabriellySS/bootcamp-santander-frontend/blob/main/clone-pagina-youtube-com-css"
+          target="_blank" rel="noopener"><button class="repo">repositório</button></a>
+      </section>
+      <section class="links">
+        <span>layout-responsivo-site-discord</span>
+        <i class="bi bi-arrow-right-circle-fill"></i>
+        <a href="layout-responsivo-site-discord/" target="_blank" rel="noopener"><button
+            class="preview">prévia</button></a>
+        <a href="https://github.com/GabriellySS/bootcamp-santander-frontend/blob/main/layout-responsivo-site-discord"
+          arget="_blank" rel="noopener"><button class="repo">repositório</button></a>
+      </section>
+      <section class="links">
+        <span>classificador-nivel-heroi</span>
+        <i class="bi bi-arrow-right-circle-fill"></i>
+        <a href="classificador-nivel-heroi/" target="_blank" rel="noopener"><button class="preview">prévia</button></a>
+        <a href="https://github.com/GabriellySS/bootcamp-santander-frontend/blob/main/classificador-nivel-heroi"
+          arget="_blank" rel="noopener"><button class="repo">repositório</button></a>
+      </section>
+      <section class="links">
+        <span>gabriellyss.github.io</span>
+        <i class="bi bi-arrow-right-circle-fill"></i>
+        <a href="https://gabriellyss.github.io/" target="_blank" rel="noopener"><button
+            class="preview">prévia</button></a>
+        <a href="https://github.com/GabriellySS/gabriellyss.github.io" target="_blank" rel="noopener"><button
+            class="repo">repositório</button></a>
+      </section>
+      <section class="links">
+        <span>pokedex</span>
+        <i class="bi bi-arrow-right-circle-fill"></i>
+        <a href="https://pokedex-one-iota-15.vercel.app/index.html" target="_blank" rel="noopener"><button
+            class="preview">prévia</button></a>
+        <a href="https://github.com/GabriellySS/pokedex" target="_blank" rel="noopener"><button
+            class="repo">repositório</button></a>
+      </section>
+      <section class="links">
+        <span>yugioh-jokenpo</span>
+        <i class="bi bi-arrow-right-circle-fill"></i>
+        <a href="yugioh-jokenpo/" target="_blank" rel="noopener"><button class="preview">prévia</button></a>
+        <a href="https://github.com/GabriellySS/bootcamp-santander-frontend/tree/main/yugioh-jokenpo" target="_blank"
+          rel="noopener"><button class="repo">repositório</button></a>
+      </section>
+
+    </section>
+
+  </main>
+
+</body>
+
 </html>
